add project page template with correct asset urls

--- a/projects/project_page.html
+++ b/projects/project_page.html
@@ -12,16 +12,16 @@
     <![endif]-->
 
     <!-- Base Stylsheets -->
-    <link rel="stylesheet" href="stylesheets/lib/bootstrap.css" >
+    <link rel="stylesheet" href="../stylesheets/lib/bootstrap.css" >
 
 	<!-- Your Stylesheets -->
-	<link rel="stylesheet" href="stylesheets/main.css" >
+	<link rel="stylesheet" href="../stylesheets/main.css" >
 
 	<!-- Base Javascripts -->
-    <script src="javascripts/lib/base.js"></script>
+    <script src="../javascripts/lib/base.js"></script>
 
 	<!-- Your Javascripts -->
-    <script src="javascripts/main.js"></script>
+    <script src="../javascripts/main.js"></script>
   </head>
 
   <body>
