--- a/index.html
+++ b/index.html
@@ -13,20 +13,48 @@
 
     <!-- Base Stylsheets -->
     <link rel="stylesheet" href="stylesheets/lib/bootstrap.css" >
+    <link rel="stylesheet" href="stylesheets/lib/jquery.fancybox.css" >
 
-	<!-- Your Stylesheets -->
-	<link rel="stylesheet" href="stylesheets/main.css" >
 
-	<!-- Base Javascripts -->
+    <!-- Your Stylesheets -->
+    <link rel="stylesheet" href="stylesheets/main.css" >
+
+    <!-- Base Javascripts -->
     <script src="javascripts/lib/base.js"></script>
+    <script src="javascripts/lib/jquery.fancybox.js"></script>
 
-	<!-- Your Javascripts -->
+
+    <!-- Your Javascripts -->
     <script src="javascripts/main.js"></script>
+
   </head>
 
   <body>
     <div class="container">
-		PUT STUFF HERE
+
+      <div class="row">
+
+        <div class="span2">
+          PUT
+        </div>
+
+        <div class="span2">
+          STUFF
+        </div>
+
+        <div class="span2">
+          HERE
+        </div>
+
+        <div class="span10">
+          <h2>Example Image Gallery</h2>
+          <a class="fancybox" href="images/187.jpg" data-fancybox-group="gallery" title="COGS 187"><img src="images/187.jpg" alt="COGS187" /></a>
+          <a class="fancybox" href="images/187.jpg" data-fancybox-group="gallery" title="COGS 187"><img src="images/187.jpg" alt="COGS187" /></a>
+        </div>
+
+      </div>
+
     </div>
+
   </body>
 </html>
