add urls for documentation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <!-- Base Stylsheets -->
+    <!-- Base Stylsheets http://twitter.github.com/bootstrap/ -->
     <link rel="stylesheet" href="stylesheets/lib/bootstrap.css" >
     <link rel="stylesheet" href="stylesheets/lib/jquery.fancybox.css" >
 
@@ -21,6 +21,8 @@
 
     <!-- Base Javascripts -->
     <script src="javascripts/lib/base.js"></script>
+
+    <!-- Fancybox Lightbox http://fancyapps.com/fancybox/#examples -->
     <script src="javascripts/lib/jquery.fancybox.js"></script>
 
 
