comments for example divs

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
           <a class="fancybox" href="images/187.jpg" data-fancybox-group="gallery" title="COGS 187"><img src="images/187.jpg" alt="COGS187" /></a>
         </div>
 
-      </div>
+      </div> <!-- end row -->
 
-    </div>
+    </div> <!-- end container -->
 
   </body>
 </html>
